--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -16,7 +16,7 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
     <mat-checkbox ngModel name="agree" color="primary" required>Agree to Terms and Conditions</mat-checkbox>
-    <button *ngIf="!isLoading" [disabled]="!f.valid" type="submit" mat-raised-button color="primary">Submit</button>
-    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <button *ngIf="!(isLoading$ | async)" [disabled]="!f.valid" type="submit" mat-raised-button color="primary">Submit</button>
+    <mat-spinner *ngIf="isLoading | async"></mat-spinner>
   </form>
 </section>
